--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,10 @@
 <footer>
+
     <div class="pt-5p pb-[2.5%] px-5p">
+
         <div class="grid sm:grid-cols-5 gap-4">
+
+            <!-- Left Column (Menu) -->
             <div class="sm:col-span-2">
                 <span class="text-sm-serif block text-feature">Mana Mei</span>
                 <h2>Offerings</h2>
@@ -11,18 +15,29 @@
                 </nav>
             </div>
 
-            <div class="sm:col-span-3">
-                <h2 class="md:text-right mt-8 sm:mt-0">Contact</h2>
-                {% include form-contact.html %}
+            <!-- Right Column (Subscribe) -->
+            <div class="sm:col-span-3 text-center">
+                <h2>Join the Circle</h2>
+                <p>Sign up for our newsletter and become part of Mana Mei community.</p>
+                <div>
+                    {% include form-subscribe.html %}
+                </div>
             </div>
+
         </div>
+
+        <!-- Social -->
         <div class="flex justify-center">
-            <a href="https://www.instagram.com/manamei_movement/" target="_blank"><img src="/uploads/icons/manamei-9.png" class="social-icon"></a>
-            <a href="https://www.facebook.com/groups/liberationthroughmovement" target="_blank"><img src="/uploads/icons/manamei-4.png" class="social-icon"></a>
-            <a href="https://www.youtube.com/@ManaMei" target="_blank"><img src="/uploads/icons/manamei-22.png" class="social-icon"></a>
+            <a href="https://www.instagram.com/manamei_movement/" target="_blank"><img
+                    src="/uploads/icons/manamei-9.png" class="social-icon"></a>
+            <a href="https://www.facebook.com/groups/liberationthroughmovement" target="_blank"><img
+                    src="/uploads/icons/manamei-4.png" class="social-icon"></a>
+            <a href="https://www.youtube.com/@ManaMei" target="_blank"><img src="/uploads/icons/manamei-22.png"
+                    class="social-icon"></a>
         </div>
     </div>
     <div class="p-4">
-        <p class="text-center text-[0.9rem]">Crafted & Developed by <a href="https://embodiedcreativeagency.com" target="_blank">Embodied Creative</a></p>
+        <p class="text-center text-[0.9rem]">Crafted & Developed by <a href="https://embodiedcreativeagency.com"
+                target="_blank">Embodied Creative</a></p>
     </div>
 </footer>
