--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,27 +1,31 @@
-<form name="contact" method="post" data-netlify="true" action="/contact-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
-    <input class="hidden" name="bot-field">
-    <div class="grid sm:grid-cols-2 gap-8 mb-4">
+<form name="contact" method="post" data-netlify="true" action="/contact-thank-you.html" onSubmit="submit"
+      data-netlify-honeypot="bot-field">
+      <input class="hidden" name="bot-field">
+
+      <div class="grid sm:grid-cols-2 gap-8 mb-4">
         <div>
-            <input type="text" id="first-name" name="first-name" required>
-            <label for="first-name"> First Name:</label>
+          <input type="text" id="first-name" name="first-name" required
+            class="block border-b border-white bg-transparent w-full">
+          <label for="first-name" class="font-serif lowercase mt-2 block">First Name:</label>
         </div>
 
         <div>
-            <input type="text" id="last-name" name="last-name">
-            <label for="last-name"> Last Name:</label>
+          <input type="text" id="last-name" name="last-name" class="block border-b border-white bg-transparent w-full">
+          <label for="last-name" class="font-serif lowercase mt-2 block">Last Name:</label>
         </div>
-    </div>
+      </div>
 
-    <div class="mb-4">
-        <input type="email" id="email" name="email">
-        <label for="email" required> Email:</label>
-    </div>
+      <div class="mb-4">
+        <input type="email" id="email" name="email" required class="block border-b border-white bg-transparent w-full">
+        <label for="email" class="font-serif lowercase mt-2 block">Email:</label>
+      </div>
 
-    <div>
-        <textarea id="message" name="message" required rows="4" placeholder="Message" class="border border-light p-2"></textarea>
-    </div>
+      <div>
+        <textarea id="message" name="message" required rows="8" placeholder="Message"
+          class="border border-white bg-transparent w-full p-2 text-white font-serif lowercase"></textarea>
+      </div>
 
-    <div class="flex justify-end">
-        <button type="submit" class="link mt-4  mb-12 sm:mb-0">Send</button>
-    </div>
-</form>
+      <div class="flex justify-end">
+        <button type="submit" class="link mt-4 mb-12 sm:mb-0">Send</button>
+      </div>
+    </form>
