newsletter form styling

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -5,7 +5,7 @@
         <div class="grid sm:grid-cols-5 gap-4">
 
             <!-- Left Column (Menu) -->
-            <div class="sm:col-span-2">
+            <div class="sm:col-span-3">
                 <span class="text-sm-serif block text-feature">Mana Mei</span>
                 <h2>Offerings</h2>
                 <nav>
@@ -16,9 +16,9 @@
             </div>
 
             <!-- Right Column (Subscribe) -->
-            <div class="sm:col-span-3 text-center">
-                <h2>Join the Circle</h2>
-                <p>Sign up for our newsletter and become part of Mana Mei community.</p>
+            <div class="sm:col-span-2 text-center">
+                <p class="font-serif lowercase text-feature text-[2rem]">Join the Circle</span></p>
+                <p>Sign up for our newsletter and join the Mana Mei community.</p>
                 <div>
                     {% include form-subscribe.html %}
                 </div>
