--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1259,6 +1259,12 @@ input[type="checkbox"]:checked::before {
 .justify-around {
   justify-content: space-around;
 }
+.justify-items-start {
+  justify-items: start;
+}
+.justify-items-end {
+  justify-items: end;
+}
 .gap-10p {
   gap: 10%;
 }
@@ -1273,6 +1279,14 @@ input[type="checkbox"]:checked::before {
 }
 .gap-8 {
   gap: 2rem;
+}
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1481,6 +1495,9 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-\[2rem\] {
+  font-size: 2rem;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1573,6 +1590,9 @@ input[type="checkbox"]:checked::before {
   }
   .sm\:col-span-3 {
     grid-column: span 3 / span 3;
+  }
+  .sm\:col-span-1 {
+    grid-column: span 1 / span 1;
   }
   .sm\:mb-0 {
     margin-bottom: 0px;
