--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -16,8 +16,8 @@
             </div>
 
             <!-- Right Column (Subscribe) -->
-            <div class="sm:col-span-2 text-center">
-                <p class="font-serif lowercase text-feature text-[2rem]">Join the Circle</span></p>
+            <div class="sm:col-span-2 text-center mt-8 sm:mt-0">
+                <p class="text-sm-serif text-feature">Join the Circle</span></p>
                 <p>Sign up for our newsletter and join the Mana Mei community.</p>
                 <div>
                     {% include form-subscribe.html %}
