--- a/_includes/form-subscribe.html
+++ b/_includes/form-subscribe.html
@@ -21,18 +21,18 @@
                 </div>
 
                 <!-- Email -->
-                <div class="mc-field-group md:col-span-2">
+                <div class="mc-field-group col-span-2">
                     <input type="email" name="EMAIL" class="block border-b border-white bg-transparent w-full" id="mce-EMAIL" required="" value="">
                     <label for="email" class="font-serif lowercase block text-left">Email:</label>
                 </div>
 
                 <!-- Button -->
-                <div class="col-span-2 text-right">
+                <div class="col-span-2 text-right mb-4 sm:mb-0">
                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="link"
                         value="Submit">
                 </div>
 
-                <div hidden=""><input type="hidden" name="tags" value="11197992,11202896"></div>
+                <div hidden=""><input type="hidden" name="tags" value="379119"></div>
                 <div id="mce-responses" class="">
                     <div class="response" id="mce-error-response" style="display: none;"></div>
                     <div class="response" id="mce-success-response" style="display: none;"></div>
