--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1007,14 +1007,35 @@ input[type="checkbox"]:checked::before {
 .absolute {
   position: absolute;
 }
+.relative {
+  position: relative;
+}
+.inset-0 {
+  inset: 0px;
+}
 .left-0 {
   left: 0px;
 }
 .top-\[50\%\] {
   top: 50%;
 }
+.right-3 {
+  right: 0.75rem;
+}
+.top-3 {
+  top: 0.75rem;
+}
+.right-\[1\.25rem\] {
+  right: 1.25rem;
+}
+.-right-\[1\.25rem\] {
+  right: -1.25rem;
+}
 .z-20 {
   z-index: 20;
+}
+.z-50 {
+  z-index: 50;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
@@ -1178,8 +1199,14 @@ input[type="checkbox"]:checked::before {
 .h-full {
   height: 100%;
 }
+.h-screen {
+  height: 100vh;
+}
 .max-h-16 {
   max-height: 4rem;
+}
+.max-h-\[80vh\] {
+  max-height: 80vh;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -1207,6 +1234,9 @@ input[type="checkbox"]:checked::before {
 }
 .w-full {
   width: 100%;
+}
+.max-w-3xl {
+  max-width: 48rem;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -1294,6 +1324,12 @@ input[type="checkbox"]:checked::before {
 .rounded-none {
   border-radius: 0px;
 }
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
 .border {
   border-width: 1px;
 }
@@ -1338,6 +1374,13 @@ input[type="checkbox"]:checked::before {
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
 }
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
@@ -1498,6 +1541,9 @@ input[type="checkbox"]:checked::before {
 .text-\[2rem\] {
   font-size: 2rem;
 }
+.font-\[100\] {
+  font-weight: 100;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -1536,6 +1582,19 @@ input[type="checkbox"]:checked::before {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline {
   outline-style: solid;
@@ -1583,6 +1642,22 @@ input[type="checkbox"]:checked::before {
 .hover\:text-feature:hover {
   --tw-text-opacity: 1;
   color: rgb(237 213 135 / var(--tw-text-opacity));
+}
+.hover\:text-gray-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.hover\:transition-\[0\.5s\]:hover {
+  transition-property: 0.5s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.hover\:duration-500:hover {
+  transition-duration: 500ms;
+}
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 @media (min-width: 640px) {
   .sm\:col-span-2 {
@@ -1733,6 +1808,9 @@ input[type="checkbox"]:checked::before {
   }
   .md\:text-left {
     text-align: left;
+  }
+  .md\:text-right {
+    text-align: right;
   }
   .md\:text-\[1\.8rem\] {
     font-size: 1.8rem;
