--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1016,20 +1016,14 @@ input[type="checkbox"]:checked::before {
 .left-0 {
   left: 0px;
 }
-.top-\[50\%\] {
-  top: 50%;
-}
-.right-3 {
-  right: 0.75rem;
+.right-\[1\.25rem\] {
+  right: 1.25rem;
 }
 .top-3 {
   top: 0.75rem;
 }
-.right-\[1\.25rem\] {
-  right: 1.25rem;
-}
-.-right-\[1\.25rem\] {
-  right: -1.25rem;
+.top-\[50\%\] {
+  top: 50%;
 }
 .z-20 {
   z-index: 20;
@@ -1048,9 +1042,6 @@ input[type="checkbox"]:checked::before {
 }
 .col-span-5 {
   grid-column: span 5 / span 5;
-}
-.col-span-3 {
-  grid-column: span 3 / span 3;
 }
 .m-4 {
   margin: 1rem;
@@ -1156,6 +1147,9 @@ input[type="checkbox"]:checked::before {
 }
 .inline-block {
   display: inline-block;
+}
+.inline {
+  display: inline;
 }
 .flex {
   display: flex;
@@ -1289,12 +1283,6 @@ input[type="checkbox"]:checked::before {
 .justify-around {
   justify-content: space-around;
 }
-.justify-items-start {
-  justify-items: start;
-}
-.justify-items-end {
-  justify-items: end;
-}
 .gap-10p {
   gap: 10%;
 }
@@ -1310,25 +1298,17 @@ input[type="checkbox"]:checked::before {
 .gap-8 {
   gap: 2rem;
 }
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
-}
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
 .overflow-hidden {
   overflow: hidden;
-}
-.rounded-none {
-  border-radius: 0px;
 }
 .rounded-lg {
   border-radius: 0.5rem;
 }
 .rounded-md {
   border-radius: 0.375rem;
+}
+.rounded-none {
+  border-radius: 0px;
 }
 .border {
   border-width: 1px;
@@ -1538,9 +1518,6 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-\[2rem\] {
-  font-size: 2rem;
-}
 .font-\[100\] {
   font-weight: 100;
 }
@@ -1568,6 +1545,10 @@ input[type="checkbox"]:checked::before {
 .tracking-widest {
   letter-spacing: 0.1em;
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 .text-dark {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1582,14 +1563,6 @@ input[type="checkbox"]:checked::before {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1643,15 +1616,6 @@ input[type="checkbox"]:checked::before {
   --tw-text-opacity: 1;
   color: rgb(237 213 135 / var(--tw-text-opacity));
 }
-.hover\:text-gray-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-.hover\:transition-\[0\.5s\]:hover {
-  transition-property: 0.5s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .hover\:duration-500:hover {
   transition-duration: 500ms;
 }
@@ -1665,9 +1629,6 @@ input[type="checkbox"]:checked::before {
   }
   .sm\:col-span-3 {
     grid-column: span 3 / span 3;
-  }
-  .sm\:col-span-1 {
-    grid-column: span 1 / span 1;
   }
   .sm\:mb-0 {
     margin-bottom: 0px;
@@ -1712,9 +1673,6 @@ input[type="checkbox"]:checked::before {
 @media (min-width: 768px) {
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
-  }
-  .md\:col-span-1 {
-    grid-column: span 1 / span 1;
   }
   .md\:mb-0 {
     margin-bottom: 0px;
