--- a/_includes/form-subscribe.html
+++ b/_includes/form-subscribe.html
@@ -10,19 +10,19 @@
 
                 <!-- First Name -->
                 <div class="mc-field-group">
-                    <input type="text" name="FNAME" class="block border-b border-white bg-transparent w-full" id="mce-FNAME" required="" value="">
+                    <input type="text" name="FNAME" class="block border-b border-white bg-transparent w-full rounded-none" id="mce-FNAME" required="" value="">
                     <label for="first-name" class="font-serif lowercase block text-left">First Name:</label>
                     </div>
                 
                 <!-- Last Name -->
                 <div class="mc-field-group">
-                    <input type="text" name="LNAME" class="block border-b border-white bg-transparent w-full" id="mce-LNAME" required="" value="">
+                    <input type="text" name="LNAME" class="block border-b border-white bg-transparent w-full rounded-none" id="mce-LNAME" required="" value="">
                     <label for="last-name" class="font-serif lowercase block text-left">Last Name:</label>
                 </div>
 
                 <!-- Email -->
                 <div class="mc-field-group col-span-2">
-                    <input type="email" name="EMAIL" class="block border-b border-white bg-transparent w-full" id="mce-EMAIL" required="" value="">
+                    <input type="email" name="EMAIL" class="block border-b border-white bg-transparent w-full rounded-none" id="mce-EMAIL" required="" value="">
                     <label for="email" class="font-serif lowercase block text-left">Email:</label>
                 </div>
 
