--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -5,18 +5,18 @@
       <div class="grid sm:grid-cols-2 gap-8 mb-4">
         <div>
           <input type="text" id="first-name" name="first-name" required
-            class="block border-b border-white bg-transparent w-full">
+            class="block border-b border-white bg-transparent w-full rounded-none">
           <label for="first-name" class="font-serif lowercase mt-2 block">First Name:</label>
         </div>
 
         <div>
-          <input type="text" id="last-name" name="last-name" class="block border-b border-white bg-transparent w-full">
+          <input type="text" id="last-name" name="last-name" class="block border-b border-white bg-transparent w-full rounded-none">
           <label for="last-name" class="font-serif lowercase mt-2 block">Last Name:</label>
         </div>
       </div>
 
       <div class="mb-4">
-        <input type="email" id="email" name="email" required class="block border-b border-white bg-transparent w-full">
+        <input type="email" id="email" name="email" required class="block border-b border-white bg-transparent w-full rounded-none">
         <label for="email" class="font-serif lowercase mt-2 block">Email:</label>
       </div>
 
@@ -26,6 +26,6 @@
       </div>
 
       <div class="flex justify-end">
-        <button type="submit" class="link mt-4 mb-12 sm:mb-0">Send</button>
+        <button type="submit" class="link mt-4">Send</button>
       </div>
     </form>
