--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -10,4 +10,5 @@
     <a href="/index.html">Home</a>
     <a href="/about.html">About</a>
     <a href="/offerings.html">Offerings</a>
+    <a href="/contact.html">Contact</a>
 </nav>
