--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1031,6 +1031,12 @@ input[type="checkbox"]:checked::before {
 .z-50 {
   z-index: 50;
 }
+.order-first {
+  order: -9999;
+}
+.order-last {
+  order: 9999;
+}
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -1045,6 +1051,9 @@ input[type="checkbox"]:checked::before {
 }
 .m-4 {
   margin: 1rem;
+}
+.m-10p {
+  margin: 10%;
 }
 .mx-0 {
   margin-left: 0px;
@@ -1668,8 +1677,17 @@ input[type="checkbox"]:checked::before {
   }
 }
 @media (min-width: 768px) {
+  .md\:order-last {
+    order: 9999;
+  }
+  .md\:order-first {
+    order: -9999;
+  }
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
+  }
+  .md\:m-0 {
+    margin: 0px;
   }
   .md\:mb-0 {
     margin-bottom: 0px;
@@ -1709,6 +1727,9 @@ input[type="checkbox"]:checked::before {
   }
   .md\:min-h-\[90vh\] {
     min-height: 90vh;
+  }
+  .md\:min-h-\[92vh\] {
+    min-height: 92vh;
   }
   .md\:w-\[40\%\] {
     width: 40%;
