--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -22,7 +22,7 @@
 
       <div>
         <textarea id="message" name="message" required rows="8" placeholder="Message"
-          class="border border-white bg-transparent w-full p-2 text-white font-serif lowercase"></textarea>
+          class="border border-white bg-transparent w-full p-2 text-white font-serif lowercase rounded-none"></textarea>
       </div>
 
       <div class="flex justify-end">
