--- a/_includes/form-subscribe.html
+++ b/_includes/form-subscribe.html
@@ -28,7 +28,7 @@
 
                 <!-- Button -->
                 <div class="col-span-2 text-right mb-4 sm:mb-0">
-                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="link"
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="link rounded-none"
                         value="Submit">
                 </div>
 
