--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1013,17 +1013,17 @@ input[type="checkbox"]:checked::before {
 .inset-0 {
   inset: 0px;
 }
-.bottom-20p {
-  bottom: 20%;
+.bottom-10p {
+  bottom: 10%;
 }
 .left-0 {
   left: 0px;
 }
-.left-20p {
-  left: 20%;
+.left-5p {
+  left: 5%;
 }
-.right-20p {
-  right: 20%;
+.right-5p {
+  right: 5%;
 }
 .right-6 {
   right: 1.5rem;
@@ -1031,8 +1031,8 @@ input[type="checkbox"]:checked::before {
 .right-\[1\.25rem\] {
   right: 1.25rem;
 }
-.top-20p {
-  top: 20%;
+.top-10p {
+  top: 10%;
 }
 .top-3 {
   top: 0.75rem;
@@ -1529,9 +1529,6 @@ input[type="checkbox"]:checked::before {
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
 }
-.text-\[2rem\] {
-  font-size: 2rem;
-}
 .text-\[3rem\] {
   font-size: 3rem;
 }
@@ -1659,6 +1656,18 @@ input[type="checkbox"]:checked::before {
   outline-offset: 2px;
 }
 @media (min-width: 640px) {
+  .sm\:bottom-20p {
+    bottom: 20%;
+  }
+  .sm\:left-10p {
+    left: 10%;
+  }
+  .sm\:right-10p {
+    right: 10%;
+  }
+  .sm\:top-20p {
+    top: 20%;
+  }
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -1706,6 +1715,18 @@ input[type="checkbox"]:checked::before {
   }
 }
 @media (min-width: 768px) {
+  .md\:bottom-20p {
+    bottom: 20%;
+  }
+  .md\:left-20p {
+    left: 20%;
+  }
+  .md\:right-20p {
+    right: 20%;
+  }
+  .md\:top-20p {
+    top: 20%;
+  }
   .md\:order-first {
     order: -9999;
   }
