--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1536,8 +1536,14 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-\[2rem\] {
+  font-size: 2rem;
+}
 .font-\[100\] {
   font-weight: 100;
+}
+.font-light {
+  font-weight: 300;
 }
 .uppercase {
   text-transform: uppercase;
