--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,3 +1,4 @@
-<a href="/theartofdancinglife.html"><section class="bg-feature text-black text-center py-2">
-    <p><strong>Join Mana Mei’s 2-Day Liberation Through Movement Journey – November 19 & 20</strong></p>
+<a href="/theartofdancinglife.html"><section class="bg-feature text-black text-center py-4">
+    <p><strong>Join Mana Mei’s 2-Day Liberation Through Movement Journey – November 19 & 20</strong>
+    <br>Click here to learn more</p>
 </section></a>
