--- a/_includes/popup.html
+++ b/_includes/popup.html
@@ -1,6 +1,6 @@
 <!-- Popup -->
 <div id="popup"
-    class="hidden fixed top-10p bottom-10p right-5p left-5p sm:top-20p sm:bottom-20p sm:right-10p sm:left-10p md:top-20p md:bottom-20p md:right-20p md:left-20p flex items-center justify-center align-center border border-feature bg-black z-20">
+    class="hidden fixed top-5p md:top-20p bottom-5p md:bottom-20p right-5p sm:right-10p md:right-20p left-5p sm:left-10p md:left-20p flex items-center justify-center align-center border border-feature bg-black z-20">
 
     <!-- Close Button (X) in upper-right corner -->
     <button id="popupClose"
