--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -1,4 +1,4 @@
-<div class="md:hidden">
+<div>
     <div class="mobile-button">
         <span class="mobile-top"></span>
         <span class="mobile-middle"></span>
