--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include banner-masterclass.html %}
 
     <!-- Site Header -->
-    {% include site-header.html %}
+    {% include mobile-nav.html %}
 
     {{content}}
 
