--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -912,9 +912,14 @@ video {
         flex-direction: column;
     }
 .mobile-menu.active {
-        left: 0;
-        right: 0;
-    }
+  left: 0px;
+  right: 0px;
+}
+@media (min-width: 768px) {
+  .mobile-menu.active {
+    left: 50%;
+  }
+}
 .mobile-menu a {
         text-decoration: none;
         font-size: 1.25rem;
