--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,4 +1,4 @@
 <a href="/theartofdancinglife.html"><section class="bg-feature text-black text-center py-4">
-    <p><strong>Join Mana Mei’s 2-Day Liberation Through Movement Journey – November 19 & 20</strong>
+    <p><strong>Join Mana Mei’s 2-Day “The Art of Dancing Life” Masterclass — November 19th & 20th</strong>
     <br>Click here to learn more</p>
 </section></a>
